# mmuko-os

./: .gitignore  BUILD_GUIDE.md  FILES-CREATED.txt  ISO-BOOT.md  MANIFEST.in  MMUKO-OS.txt  Main.cs  Makefile  NSIGII_HeartfullFirmware.cs  README.md  RINGBOOT  boot.asm  bzy_mpda.c  bzy_mpda.h  heartfull_firmware.h  heartfull_membrane.c  index_ringboot.html  iso-boot.sh  iso-creator.py  mmuko-compositor.csproj  mmuko-os.img  mmuko-os.sln  nsigii_cpp_wrapper.cpp  nsigii_cpp_wrapper.h  pyproject.toml  setup.py  tripartite_discriminant.c  tripartite_discriminant.h
.claude/: settings.local.json
assets/: nsigii.txt
boot/: contract.inc  kernel.asm  mbr.asm  mmuko_bootloader.asm  mmuko_stage1_boot.asm  stage1.asm  stage2.asm  vbr.asm
config/: boot.cfg
cpp/: riftbridge.cpp
docs/: IMPLEMENTATION_SUMMARY.md  boot-image-spec.md  boot_contract.md  kernel.md
firmware/: Makefile.gosi  bios_interface.c  bios_interface.cpp  bios_interface.h  bios_interface_cpp.h  gosi  gosi.c  gosi.toml
firmware-codec-mvp/: README.md
holoringboot/: index.html  opensense_signal.html  pixelbuffer.js  style.css
img/: mmuko-os-bootable.iso
include/: boot_contract.h  colors.h  consensus.h  mmuko_codegen.h  ring_model.h  rtrie.h
kernel/: mmuko_kernel.asm  mmuko_stage2_bridge.cpp  mmuko_stage2_loader.c  runtime.asm
mmuko-boot/: BOOT_CONTRACT_MAPPING.md  Makefile  generate_from_spec.py  image_layout.h  mkimage.c  mmuko-boot  mmuko-boot.c  mmuko-som-pack.c  mmuko_boot_contract.h  mmuko_som.h  runtime.asm  stage2.asm  stage2_loader.c
nsigii/: README.md  index.html
repl/: repl_main.c
(+293 files in other folders)
