[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mmuko-os"
version = "0.1.0"
description = "Cython bindings for the MMUKO-OS NSIGII Heartfull firmware"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OBINexus Computing | Nnamdi Michael Okpala" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C",
  "Programming Language :: Cython",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Microsoft :: Windows",
]

[tool.setuptools]
package-dir = {"" = "python"}

[tool.setuptools.packages.find]
where = ["python"]

[tool.cibuildwheel]
build = "cp3*-*"
